--- a/Lapbase Application/Views/Home/Index.cshtml
+++ b/Lapbase Application/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Lapbase_Application.Models.test
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -7,7 +8,7 @@
     <p class="lead">
 
         
-        @((Lapbase_Application.Controllers.HomeController)this.ViewContext.Controller).Index("a","b");
+     @Model.s
 
     </p>
 </div>
